@@ -11020,7 +11020,6 @@ body.archive.tax-post_format .wrap #primary #main > article .post-tags-wrapper,
 body.archive.tax-post_format .wrap #primary #main > .infinite-wrap > article .post-tags-wrapper,
 body.search .wrap #primary #main > article .post-tags-wrapper,
 body.search .wrap #primary #main > .infinite-wrap > article .post-tags-wrapper {
-  margin-top: 30px;
   padding: 20px 40px 13px 40px;
   border-top: 1px solid #ddd; }
   body.blog .wrap #primary #main > article .post-tags-wrapper:after,
