@@ -208,7 +208,7 @@
 %module-single-footer_archive {
 	@include lsx-clear-div;
 					
-	margin-top: 30px;
+	//margin-top: 30px;
 	padding: 20px 40px 13px 40px;
 	border-top: 1px solid #ddd;
 
