@@ -4,6 +4,7 @@
 * Fix - Enabled compatibility between LSX Banners (Soliloquy) and LSX Theme
 * Fix - Enabled compatibility between LSX Blog Customiser (categories BS carousel) and LSX Theme
 * Fix - Enabled compatibility between LSX Blog Customiser (display full content on blog pages) and LSX Theme
+* Fix - Enabled compatibility between LSX Blog Customiser (display grid layout on blog pages) and LSX Theme
 
 ### 1.8.1
 * Fix - Avoided use a return function inside the PHP function "empty" (compatibility with PHP 5.5 and lower)
